# expiration-tracker

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  compose.dev.yml  compose.slim.yml  compose.yml  demo_deploy.sh  docker-compose-dev.yml  docker-compose.yml  index.html  mkdocs.yml  schema.yml  sitemap.xml  sonar-project.properties
.github/: dependabot.yml  labeler.yml
.github/workflows/: be_tests.yml  build.yml  codeql.yml  demo_deploy.yml  fe_build.yml  labeler.yml  sonar.yml
app/: index.html
app/item_lifecycle/: index.html
backend/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml
backend/authentication/: admin.py  models.py  serializers.py  urls.py  views.py
backend/authentication/migrations/: 0001_initial.py
backend/core/: settings.py  tests.py
backend/expiration_tracker/: asgi.py  mixins.py  models.py  settings.py  tests.py  throttles.py  urls.py  wsgi.py
backend/items/: admin.py  constants.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/items/migrations/: 0001_initial.py  0002_item_upc_item_items_upc_6f26a2_idx_and_more.py
c4/container/: index.html
c4/system/: index.html
database/database/: index.html
docs/: .env.example  db.html  db.sql  index.md  pages  schema.yml
docs/app/: item_lifecycle.md
docs/c4/: system.md
docs/database/: database.md
frontend/: .eslintrc.json  .eslintrc.yml  index.html  openapi-config.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.less  main.tsx  setupTests.ts
frontend/src/app/: api.ts  authSlice.ts  baseApi.ts  index.d.ts  store.ts  types.d.ts
frontend/src/components/: ItemEnumSelector.tsx  ItemForm.tsx  ItemModalForm.tsx  ItemTable.tsx  LocationForm.tsx  LocationModalForm.tsx  LoginForm.tsx  ThemeToggle.tsx  types.d.ts
frontend/src/components/Items/: ItemEnumSelector.tsx  ItemForm.tsx  ItemTable.tsx
frontend/src/components/common/: Footer.tsx  Header.tsx
frontend/src/components/shared/: Footer.tsx  Header.tsx  ModalPopup.tsx  Scanner.tsx  ThemeToggle.tsx
frontend/src/constants/: settings.ts
frontend/src/features/auth/: LoginForm.tsx  authSlice.ts
frontend/src/features/common/: Footer.tsx  Header.tsx
frontend/src/features/items/: ItemModalForm.tsx  ItemPage.tsx  LocationModalForm.tsx
frontend/src/hooks/: getProgress.ts  usePagination.ts  useProgress.ts
frontend/src/pages/: HomePage.tsx  ItemPage.tsx  LoginPage.test.tsx  LoginPage.tsx  ProtectedRoute.tsx
frontend/src/redux/: api.ts  authSlice.ts  baseApi.ts
frontend/src/settings/: settings.ts
item_lifecycle/: index.html
nginx/: Dockerfile  staging.conf
search/: search_index.json
