[tool.poetry]
authors = ["Oleksandr Korol <zibertua@gmail.com>"]
description = ""
name = "backend"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^5.0.1"
django-cors-headers = "^4.3.0"
django-extensions = "^3.2.3"
django-filter = "^23.3"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = {extras = ["crypto"], version = "^5.3.0"}
drf-spectacular = "^0.27.1"
duckduckgo-search = "^3.9.0"
gunicorn = "^21.2.0"
psycopg = {extras = ["binary"], version = "^3.1.12"}
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[tool.poetry.group.dev.dependencies]
mixer = "^7.2.2"
pre-commit = "^3.5.0"
ruff = "^0.1.15"

[tool.poetry.group.test.dependencies]
coverage = {extras = ["toml"], version = "^7.3.2"}

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.6"
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs-graphviz = "^1.5.3"
mkdocstrings = "^0.24.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
line-length = 120

extend-select = ["I"]
ignore = ['COM812', 'COM819', 'E501', 'Q000', 'Q001', 'Q002', 'Q003', 'W191','EM101']
select = ["E", "F", "W", "I", "I001", "C4", "Q", "RUF", "PIE", "COM", "ERA", "FURB", "LOG", "T20", "PYI", "DJ", "EM"]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "migrations",
  "dist",
  ".venv",
  ".conf",
  "asgi.py",
]
per-file-ignores = {}
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"
[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.format]
# Like Black, use double quotes for strings.
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.isort]
combine-as-imports = true
[tool.coverage.run]
branch = true
omit = [
  ".venv/*",
  "*/migrations/*",
  "*/admin.py",
  "*/apps.py",
  "manage.py",
  "*/settings.py",
  "*/asgi.py",
  "*/wsgi.py",
  "*/tests.py",
  "example/*",
  "shop/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
sort = "cover"
